<resources>
    <string name="app_name">教学教务助手</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="rem_pwn">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="kbcx">课表查询</string>
    <string name="cjcx">成绩查询</string>
    <string name="kscx">考试查询</string>
    <string name="kjscx">空教室查询</string>
    <string name="grxx">个人信息查询</string>
    <string name="schooltime">选择课表时间</string>
    <string name="schoolyear">学年:</string>
    <string name="semester">学期:</string>
    <string name="search">查询</string>
    <string name="course_description">课程性质:</string>
    <string name="course_grade">总评:</string>
    <string name="course_id">课程代码:</string>
    <string name="course_credit">学分:</string>
    <string name="course_point">绩点:</string>
    <string name="course_sum">科目-总学分:</string>
    <string name="course_adv">加权平均:</string>
    <string name="course_padv">平均绩点:</string>
    <string name="exam_time">考试时间:</string>
    <string name="exam_local">考试地点:</string>
    <string name="grade_xq">成绩详情</string>
    <string name="grade_items">项目</string>
    <string name="grade_sum">总评</string>
    <string name="grade_normal">平时</string>
    <string name="grade_final">期末</string>
    <string name="grade_ratio">比例</string>
    <string name="grade_grade">成绩</string>
    <string name="loadin">导入</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_image">图片</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>

    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_ori">原图发送</string>


</resources>
