<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:padding="10dp">
            <TextView
                android:layout_span="3"
                android:layout_gravity="center"
                android:text="@string/grade_xq"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/grade_items"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/grade_ratio"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:text="@string/grade_grade"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/grade_normal"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/grade_normal_ratio"
                android:textStyle="italic"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/grade_normal_grade"
                android:textStyle="italic"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/grade_final"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/grade_final_ratio"
                android:textStyle="italic"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/grade_final_grade"
                android:textStyle="italic"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/grade_sum"
                android:textStyle="italic"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/grade_sum_ratio"
                android:textStyle="italic"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/grade_sum_grade"
                android:textStyle="italic"
                android:layout_gravity="center"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_span="3"
                android:layout_height="20dp"
                android:layout_gravity="center"/>
        </TableRow>

    </TableLayout>

</LinearLayout>