<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teachingassistant.Activity.Education.CourseActivity">

    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/course_Hang1_height"
        android:orientation="horizontal"
        android:id="@+id/Line1">

        <!--月份-->
        <TextView
            android:layout_width="@dimen/course_Lie1_width"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/month"
            android:text="3月"/>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期一-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1"
                android:id="@+id/monday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/monday"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期二-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="2"
                android:id="@+id/tuesday"
                android:gravity="center"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:gravity="center"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期三-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="3"
                android:id="@+id/wednesday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期四-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="4"
                android:id="@+id/thursday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thursday"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期五-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="5"
                android:id="@+id/friday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/friday"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期六-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="6"
                android:id="@+id/saturday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/saturday"
                android:textSize="15sp"/>

        </LinearLayout>

        <!--分割条-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <!--星期日-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/l7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="7"
                android:id="@+id/sunday"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sunday"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>
    <!--行分割条-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/linedivider"
        android:layout_below="@+id/Line1"
        android:background="@color/colorPrimary"/>
    <!--课表-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linedivider"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--第一列 列宽加1-->
            <com.teachingassistant.Support.View.ListView.ListViewNoScroll
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:divider="@color/colorPrimary"
                android:dividerHeight="1dp"
                android:id="@+id/part_list">
            </com.teachingassistant.Support.View.ListView.ListViewNoScroll>

            <!--课表部分-->
            <RelativeLayout
                android:id="@+id/course_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/part_list">

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
